--- a/app/src/main/res/layout/fragment_add_book_by_code.xml
+++ b/app/src/main/res/layout/fragment_add_book_by_code.xml
@@ -16,11 +16,12 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            >
 
             <EditText
                 android:id="@+id/rCode"
-                android:layout_width="348dp"
+                android:layout_width="324dp"
                 android:layout_height="match_parent"
                 android:layout_margin="20dp"
                 android:layout_marginLeft="15dp"
